# AutoPatent

./: README.md  config.realrun.json  config.realrun.online.json  pyproject.toml
autopatent/: __init__.py  cli.py  config.py  models.py
autopatent/llm/: __init__.py  client.py
autopatent/pipeline/: __init__.py  checkpoint.py  contracts.py  engine.py
autopatent/pipeline/stages/: __init__.py  stage_00_input_ingest.py  stage_01_direction_discovery.py  stage_02_prior_art_scan.py  stage_03_direction_scoring.py  stage_04_human_direction_gate.py  stage_05_to_15_stubs.py
autopatent/search/: __init__.py  dedup.py  evidence_summary.py  plugin_hub.py  providers.py  query_builder.py  resources.py
autopatent/search/fallback/: __init__.py  crawl4ai_runner.py  jina_reader_runner.py
autopatent/search/plugins/: __init__.py  arxiv_plugin.py  base.py  crossref_plugin.py  epo_ops_plugin.py  openalex_plugin.py  registry.py  semantic_scholar_plugin.py
autopatent/templates/: __init__.py  renderer.py
autopatent/templates/defaults/: cn_invention_default.docx.j2.md  cn_invention_default.md.j2  (+1 more)
tests/: test_checkpoint_resume.py  test_cli_pipeline_execution.py  test_cli_run_modes.py  test_direction_discovery.py  test_direction_gate.py  test_disclosure_render.py  test_input_ingest.py  test_llm_generation.py  test_pipeline_smoke.py  test_prior_art_pipeline.py  test_prior_art_resources.py  test_search_fallback_runners.py  test_search_plugin_hub_config.py  test_search_plugin_hub_provider.py  test_search_plugin_registry.py  test_search_plugins_parsing.py  test_template_default_fallback.py
(+7 files in other folders)
