[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopatent"
version = "0.1.0"
description = "AutoPatent CLI tooling"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.7.0",
]

[project.scripts]
autopatent = "autopatent.cli:app"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["autopatent"]
